Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.38 [20140311] [svn: r559]
  - sg_ses: add --dev-slot-num= and --sas-addr=
    - fix --data=- problem with large buffers
    - new --data=@FN to read hex data from file FN
    - error and warning message cleanup
    - add --maxlen= option
  - sg_inq: add --block=0|1 option to control opens
    - add --inhex=FN to read response in ASCII hex from
      a file; --inhex=FN --raw reads response in binary
    - make -HHH (-HHHH for '-p ai') output suitable for
      another sg_inq invocation to use --inhex
    - add LU_CONG to standard inquiry response output
    - decode ASCII information VPD pages
    - add HAW_ZBC in block char. VPD page (14-018r02)
    - sync version descriptors dated 20131126
    - allow --page=-1 to force std INQUIRY decoding
    - fix overflow in encode_whitespaces
    - improve unit serial number display (VPD page 0x80)
  - sg_vpd: add LU_CONG to standard inquiry response output
    - add --inhex=FN to read response in ASCII hex from
      a file; --inhex=FN --raw reads response in binary
    - decode Third Party Copy (tpc) page
    - add HAW_ZBC in block char. VPD page (14-018r02)
    - add LTO and DDS vendor pages
    - allow --page=num to restrict --enumerate output
  - sg_persist: add PROUT: Replace Lost Reservation (spc4r36)
    - add --transport-id= for SOP: 'sop,<routing_id_in_hex>'
  - sg_readcap: for --16 show physical block size if
    different from logical block size
  - sg_xcopy: environment variables: XCOPY_TO_SRC and
    XCOPY_TO_DST indicate where xcopy command is sent
    - change default to send xcopy to dst (was src)
    - improve CL handling of short options (e.g. '-vv')
  - sg_luns: guard against garbage response
  - sg_decode_sense: with --nospace ignore spaces on