@@ -232,9 +232,9 @@ the \fIDEVICE\fR reports a miscompare sense key. VERIFY and COMPARE AND
 WRITE commands may report this.
 .TP
 .B 15
-the utility is unable to open, close or use the given \fIDEVICE\fR.
-The given file name could be incorrect or there may be permission
-problems. Adding the '\-v' option may give more information.
+the utility is unable to open, close or use the given \fIDEVICE\fR or some
+other file. The given file name could be incorrect or there may be
+permission problems. Adding the '\-v' option may give more information.
 .TP
 .B 20
 the \fIDEVICE\fR reports it has a check condition but "no sense"
